# RoboTrace

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_READY.md  LICENSE  PUBLIC_CLAIMS.md  README.md  RELEASE_CHECKLIST.md  RESULTS.md  pyproject.toml
configs/: datasets.yaml  metrics.yaml  perturbations.yaml  release.yaml
github_release/logs/: stage10_git_status.txt  stage10_test_log.txt
hf_release/: README_RELEASE_PREVIEW.md  dataset_card.md  publish_instructions.md  release_notes.md
hf_release/artifacts/reports/: failure_taxonomy.md  limitations.md  robotrace_report.html  robotrace_report.md
hf_release/artifacts/summaries/: async_summary.csv  robotrace_final_metrics.csv  robotrace_final_summary.json  robotrace_missing_evidence_manifest.json  stage3_dataset_summary.json  stage4_visual_summary.json  stage5_instruction_summary.csv  stage5_instruction_summary.json  stage7_baseline_summary.csv
hf_release/dataset_card/: README.md
hf_release/manifest/: release_manifest.csv  release_manifest.json
hf_release/space_app/: README.md  app.py
hf_release/space_app/artifacts/summaries/: async_dataset_summary.json  robotrace_evidence_index.csv  (+3 more)
reports/: reproducibility.md  robotrace_report.md
robotrace/: __init__.py  async_sim.py  baselines.py  config.py  datasets.py  episode_schema.py  evaluators.py  hf_release.py  instruction_perturbations.py  metrics.py  perturbations.py  reporters.py  visualization.py
tests/: run_tests.py  test_async_sim.py  test_metrics.py  test_perturbations.py  test_report_generation.py
